Remove unnecessary views. Add angular app module. Config bundle.

--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Shared/_Layout.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Shared/_Layout.cshtml
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Konsorcjum Lekarzy</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/initScript")
 
     <script type="text/javascript">
         var appInsights=window.appInsights||function(config){
@@ -18,7 +18,7 @@
         appInsights.trackPageView();
     </script>
 </head>
-<body>
+<body ng-app="app">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -32,8 +32,6 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -43,12 +41,10 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Konsorcjum Lekarzy</p>
         </footer>
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/Angular/app.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
