--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Content/Site.css
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Content/Site.css
@@ -1,4 +1,39 @@
 ﻿@import url(bootstrap.css);
-.navbar {
-  background-color: #10364f; }
+.body-content {
+  margin-top: 50px; }
+
+.side-nav {
+  margin-left: -225px; }
+
+.font--sidenav {
+  font-size: 20px; }
+
+.font--nav {
+  font-size: 20px; }
+
+.font--main {
+  font-size: 30px; }
+
+.font--submain {
+  font-size: 20px; }
+
+.navbar-brand {
+  font-size: 25px; }
+
+.header--register {
+  text-align: center;
+  font-size: 25px;
+  margin-top: 10px; }
+
+.btn--register {
+  font-size: 16px;
+  float: right;
+  width: 150px;
+  height: 45px;
+  text-align: center;
+  background-color: #1b1b1b;
+  color: white; }
+  .btn--register:hover {
+    background-color: #940000;
+    color: white; }
 
