--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Shared/_Layout.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Shared/_Layout.cshtml
@@ -19,32 +19,31 @@
     </script>
 </head>
 <body ng-app="app">
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
-        </div>
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button> 
+        @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Konsorcjum Lekarzy</p>
-        </footer>
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+            
+        @Html.Partial("_LoginPartial")
+
+        <ul class="nav navbar-nav side-nav">
+            <li class="active font font--sidenav"><a href="">Doctors</a></li>
+        </ul>
     </div>
-    @Scripts.Render("~/Angular/app.js")
-    @RenderSection("scripts", required: false)
+</div>
+
+<div class="container body-content">
+    @RenderBody()
+</div>
+    
+@Scripts.Render("~/Angular/app.js")
+@RenderSection("scripts", required: false)
+
 </body>
 </html>
