--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Shared/_Layout.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Shared/_Layout.cshtml
@@ -6,17 +6,7 @@
     <title>@ViewBag.Title - Konsorcjum Lekarzy</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/initScript")
-
-    <script type="text/javascript">
-        var appInsights=window.appInsights||function(config){
-            function r(config){t[config]=function(){var i=arguments;t.queue.push(function(){t[config].apply(t,i)})}}var t={config:config},u=document,e=window,o="script",s=u.createElement(o),i,f;for(s.src=config.url||"//az416426.vo.msecnd.net/scripts/a/ai.0.js",u.getElementsByTagName(o)[0].parentNode.appendChild(s),t.cookie=u.cookie,t.queue=[],i=["Event","Exception","Metric","PageView","Trace"];i.length;)r("track"+i.pop());return r("setAuthenticatedUserContext"),r("clearAuthenticatedUserContext"),config.disableExceptionTracking||(i="onerror",r("_"+i),f=e[i],e[i]=function(config,r,u,e,o){var s=f&&f(config,r,u,e,o);return s!==!0&&t["_"+i](config,r,u,e,o),s}),t
-        }({
-            instrumentationKey:"394fdb08-1cff-4f82-8cc1-a415fb01fbdb"
-        });
-        
-        window.appInsights=appInsights;
-        appInsights.trackPageView();
-    </script>
+    @Scripts.Render("~/angular")
 </head>
 <body ng-app="app">
 <div class="navbar navbar-inverse navbar-fixed-top">
@@ -29,12 +19,7 @@
         @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
-            
         @Html.Partial("_LoginPartial")
-
-        <ul class="nav navbar-nav side-nav">
-            <li class="active font font--sidenav"><a href="">Doctors</a></li>
-        </ul>
     </div>
 </div>
 
@@ -42,7 +27,7 @@
     @RenderBody()
 </div>
     
-@Scripts.Render("~/Angular/app.js")
+
 @RenderSection("scripts", required: false)
 
 </body>
