--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Content/home.scss
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Content/home.scss
@@ -55,10 +55,28 @@
         &:hover{
             background-color: #940000;
             color: white;
+            }
+        }
+    &--login{
+        font-size: $mainFontSize*0.8;
+        position: relative;
+        left: -13px;
+        float: right;
+        width:150px;
+        height:45px;
+        text-align:center;
+        background-color: #1b1b1b;
+        color:white;
+       
+        
+
+        &:hover{
+            background-color:#1536f8;
+            color:white;
         }
     }
 }
-
-.log-in-external{
-    margin-top: 53px;
+.loginCheckbox{
+    position: relative;
+    left: 145px;
 }
