--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Home/Index.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Home/Index.cshtml
@@ -1,15 +1,7 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blur Admin</title>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon-96x96.png">
-</head>
+﻿{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}  
+
 <body>
     <main class="auth-main">
         <div class="auth-block">
@@ -36,14 +28,6 @@
                 </div>
             </form>
             <div class="auth-sep"><span><span>or Sign in with one click</span></span></div>
-            @*<div class="al-share-auth">
-                <ul class="al-share clearfix">
-                    <li><i class="socicon socicon-facebook" title="Share on Facebook"></i></li>
-                    <li><i class="socicon socicon-twitter" title="Share on Twitter"></i></li>
-                    <li><i class="socicon socicon-google" title="Share on Google Plus"></i></li>
-                </ul>
-            </div>*@
         </div>
     </main>
 </body>
-</html>
