Edit login page.

--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Content/sass/main.scss
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Content/sass/main.scss
@@ -1,6 +1,5 @@
 @import 'common.scss';
-@import "404";
-@import "auth";
+@import 'auth.scss';
 @import "theme/bootstrap-overrides/panel";
 @import "theme/bootstrap-overrides/tabs";
 @import "theme/components/accordion";
