--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Content/sass/theme/components/_pageTop.scss
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Content/sass/theme/components/_pageTop.scss
@@ -32,6 +32,12 @@ a.al-logo {
   float: right;
   min-width: 230px;
   margin-top: 10px;
+
+  .signout{
+      float: right;
+      padding-top: 10px; 
+      font-size: 20px;
+  }
 }
 
 .al-user-profile {
