--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/Login.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/Login.cshtml
@@ -11,7 +11,7 @@
         <div class="auth-block">
 
             <h1>Sign in to portal</h1>
-            <a href="account" class="auth-link">New to Blur Admin? Sign up!</a>
+            <a href="/Account/Register" class="auth-link">Register !</a>
 
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
@@ -37,11 +37,10 @@
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-default btn-auth">Sign in</button>
-                        <a href class="forgot-pass">Forgot password?</a>
+                        <a href="/Account/ForgotPassword" class="forgot-pass">Forgot password?</a>
                     </div>
                 </div>
             }
-
             <div class="auth-sep"><span><span>or Sign in with one click</span></span></div>
         </div>
     </main>
