--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/Register.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/Register.cshtml
@@ -1,54 +1,53 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blur Admin</title>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900&subset=latin,greek,greek-ext,vietnamese,cyrillic-ext,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon-96x96.png">
-</head>
+﻿@using KonsorcjumLekarzy.Models
+@model RegisterViewModel
+
+@{
+    ViewBag.Title = "Register in";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
+}
+
 <body>
     <main class="auth-main">
         <div class="auth-block">
-            <h1>Sign up to Blur Admin</h1>
-            <a href="/" class="auth-link">Already have a Blur Admin account? Sign in!</a>
-            <form class="form-horizontal">
-                <div class="form-group">
-                    <label for="inputName3" class="col-sm-2 control-label">Name</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputName3" placeholder="Full Name">
-                    </div>
-                </div>
+
+            <h1>Register in to portal</h1>
+
+            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
+
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
+
+                <div class="form-group">
+                    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                    <div class="col-sm-10">
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default btn-auth">Sign up</button>
+                        <button type="submit" class="btn btn-default btn-auth">Sign in</button>
+                        <a href="/Account/Login" class="forgot-pass">Login ?</a>
                     </div>
                 </div>
-            </form>
-            <div class="auth-sep"><span><span>or Sign up with one click</span></span></div>
-            @*<div class="al-share-auth">
-                <ul class="al-share clearfix">
-                    <li><i class="socicon socicon-facebook" title="Share on Facebook"></i></li>
-                    <li><i class="socicon socicon-twitter" title="Share on Twitter"></i></li>
-                    <li><i class="socicon socicon-google" title="Share on Google Plus"></i></li>
-                </ul>
-            </div>*@
+            }
         </div>
     </main>
 </body>
-</html>
