Change default layout in all views.

--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/SendCode.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/SendCode.cshtml
@@ -1,6 +1,7 @@
 ﻿@model KonsorcjumLekarzy.Models.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
