--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,6 +1,7 @@
 ﻿@model KonsorcjumLekarzy.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>Associate your @ViewBag.LoginProvider account.</h3>
