--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/Register.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/Register.cshtml
@@ -12,7 +12,7 @@
 
             <h1>Register in to portal</h1>
 
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            @using (Html.BeginForm("Register", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
