--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/ResetPassword.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/ResetPassword.cshtml
@@ -1,6 +1,7 @@
 ﻿@model KonsorcjumLekarzy.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
