--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/VerifyCode.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/VerifyCode.cshtml
@@ -1,6 +1,7 @@
 ﻿@model KonsorcjumLekarzy.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
