Added Specialization in administration

--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Docotrs/Index.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Docotrs/Index.cshtml
@@ -22,7 +22,7 @@
             @Html.DisplayNameFor(model => model.BirthDay)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SpecializationId)
+            @Html.DisplayNameFor(model => model.Specialization.SpecializationName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.UserId)
