--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Docotrs/Edit.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Docotrs/Edit.cshtml
@@ -1,13 +1,13 @@
 ﻿@model KonsorcjumLekarzy.Database.Model.Doctor
 
 @{
-    ViewBag.Title = "Create";
-    Layout = "~/Areas/Administration/Views/Shared/_LayoutLogin.cshtml";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
-@using (Html.BeginForm()) 
+
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
@@ -15,6 +15,8 @@
         <h4>Doctor</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.DoctorId)
+
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -43,7 +45,7 @@
             @Html.LabelFor(model => model.SpecializationId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.SpecializationId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Specialization.SpecializationName, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.SpecializationId, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -57,7 +59,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
@@ -66,3 +68,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
