--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Docotrs/Create.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Docotrs/Create.cshtml
@@ -40,9 +40,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.SpecializationId, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Specialization.SpecializationName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.SpecializationId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Specialization.SpecializationName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Specialization.SpecializationName, "", new { @class = "text-danger" })
             </div>
         </div>
