--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Docotrs/Details.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Docotrs/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model KonsorcjumLekarzy.Database.Model.Doctor
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Details";
     Layout = "~/Areas/Administration/Views/Shared/_LayoutLogin.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Details</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Doctor</h4>
     <hr />
@@ -37,20 +36,23 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.SpecializationId)
+            @Html.DisplayNameFor(model => model.Specialization.SpecializationName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.SpecializationId)
+            @Html.DisplayFor(model => model.Specialization.SpecializationName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Specialization.SpecializationDescription)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Specialization.SpecializationDescription)
         </dd>
     </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
 </div>
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.DoctorId }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
