Update areas to the admin panel. /Administration

--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Docotrs/Index.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Docotrs/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<KonsorcjumLekarzy.Database.Model.Doctor>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Doctors";
     Layout = "~/Areas/Administration/Views/Shared/_LayoutLogin.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Doctors</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
