--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Patient/Index.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Patient/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<KonsorcjumLekarzy.Database.Model.Patient>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Patient";
     Layout = "~/Areas/Administration/Views/Shared/_LayoutLogin.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Patient</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
