--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Docotrs/Edit.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Docotrs/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Administration/Views/Shared/_LayoutLogin.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Doctors edit</h2>
 
 
 @using (Html.BeginForm())
