--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Patient/Create.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Patient/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Administration/Views/Shared/_LayoutLogin.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Patient create</h2>
 
 @using (Html.BeginForm()) 
 {
