--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Shared/_LayoutLogin.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Shared/_LayoutLogin.cshtml
@@ -9,15 +9,51 @@
 
 </head>
 <body>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+    
+    
 
-    @Scripts.Render("~/bundles/PluginScripts")
-    @RenderSection("scripts", required: false)
+<div class="container body-content">
+    
+    
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/Administration">Admin</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="/Administration/Users/">Users</a></li>
+                    <li><a href="/Administration/Docotrs/">Doctors</a></li>
+                    <li><a href="/Administration/Patient/">Patients</a></li>
+                    <li><a href="/Administration/Specialization/">Specializations</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/Account/LogOff">Log off</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>  
+
+
+    @RenderBody()
+    
+
+    <hr/>
+    <footer>
+        <p>&copy; @DateTime.Now.Year - Administartion Panel</p>
+    </footer>
+</div>
+
+@Scripts.Render("~/bundles/PluginScripts")
+@RenderSection("scripts", required: false)
 </body>
 </html>
