--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Specialization/Details.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Specialization/Details.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Administration/Views/Shared/_LayoutLogin.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Specialization details</h2>
 
 <div>
     <h4>Specialization</h4>
