--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Shared/_LayoutLogin.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Shared/_LayoutLogin.cshtml
@@ -35,6 +35,7 @@
                     <li><a href="/Administration/Docotrs/">Doctors</a></li>
                     <li><a href="/Administration/Patient/">Patients</a></li>
                     <li><a href="/Administration/Specialization/">Specializations</a></li>
+                    <li><a href="/Administration/Visit/">Visit</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="/Account/LogOff">Log off</a></li>
