--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Content/sass/theme/components/_pageTop.scss
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Content/sass/theme/components/_pageTop.scss
@@ -30,12 +30,13 @@ a.al-logo {
 
 .user-profile {
   float: right;
-  min-width: 230px;
+  padding-top: 12px;
+  font-size: 21px;
+  min-width: 310px;
   margin-top: 10px;
 
   .signout{
       float: right;
-      padding-top: 10px; 
       font-size: 20px;
   }
 }
