--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Content/sass/theme/_buttons.scss
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Content/sass/theme/_buttons.scss
@@ -106,6 +106,31 @@ button.btn.btn-danger {
   }
 }
 
+button.btn.btn-booking-visit {
+  @include buttonColor($danger, $danger);
+  width: 200px;
+  height: 50px;
+  font-size: 20px;
+  margin-top: 15px;
+  margin-left: 15px;
+  color: white;
+  &:active, &:target {
+    background-color: $danger-dark;
+  }
+}
+
+button.btn.btn-email {
+  @include buttonColor($primary, $primary);
+  color: white;
+  margin-top: 15px;
+  margin-left: 15px;
+  width: 200px;
+  height: 50px;
+  font-size: 20px;
+  &:active, &:target {
+    background-color: $primary-dark;
+  }
+}
 
 button.btn.btn-inverse {
   @include buttonColor($help-text, $help-text);
