Add new component for single vist. Add moment.js libary for manage data in js. Change styling.

--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Shared/_Layout.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
 <body>
     <div class="body-bg"></div>
     @RenderBody()
+    <script src="~/Scripts/moment.js"></script>
     @Scripts.Render("~/bundles/PluginScripts")
     @Scripts.Render("~/bundles/AngularModules")
     @RenderSection("Scripts", false);
