--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Shared/_LayoutLogin.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Shared/_LayoutLogin.cshtml
@@ -11,8 +11,10 @@
 <body>
     <div class="body-bg"></div>
     @RenderBody()
+    <script src="~/Scripts/moment.js"></script>
     @Scripts.Render("~/bundles/PluginScripts")
     @Scripts.Render("~/bundles/AngularModules")
     @RenderSection("Scripts", false);
+    
 </body>
 </html>
