--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/Login.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Views/Account/Login.cshtml
@@ -37,7 +37,7 @@
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-default btn-auth">Sign in</button>
-                        <a href="/Account/ForgotPassword" class="forgot-pass">Forgot password?</a>
+                        @*<a href="/Account/ForgotPassword" class="forgot-pass">Forgot password?</a>*@
                     </div>
                 </div>
             }
