Changed single visit styling. Update administration panel.

--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Prescription/Create.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Prescription/Create.cshtml
@@ -21,7 +21,7 @@
         @if (Model.VisitsId.Count != null)
         {
             <div class="form-group">
-                <label class="col-sm-2 control-label">Patients</label>
+                <label class="col-sm-2 control-label">Visit</label>
                 <div class="col-sm-10">
                     @foreach (var item in Model.VisitsId)
                     {
