--- a/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Visit/Index.cshtml
+++ b/KonsorcjumLekarzy/KonsorcjumLekarzy/Areas/Administration/Views/Visit/Index.cshtml
@@ -27,6 +27,16 @@
         <th>
             @Html.DisplayNameFor(model => model.Confirmation)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Description)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Comments)
+        </th>
+        
+        
+        
+
         <th></th>
     </tr>
 
@@ -46,6 +56,12 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Confirmation)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Description)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Comments)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.VisitID }) |
